corrected events page style error on small screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -627,10 +627,10 @@ h3 {
     }
 
     /* Events section */
-    #events h2 {
+    /* #events h2 {
         margin-left: 1em;
         margin-top: 50px;
-    }
+    } */
 
     /* Join us form */
     #join {
